Fixed z-index

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@
   position: fixed;
   background-color: rgba(13, 33, 61, 0.95);
   box-shadow: 0 1.6rem 3.2rem rgba(0, 0, 0, 0.25);
+  z-index: 999;
 }
 
 /* ************************************************** */
